# mRobot_book

./: HelloWorld.cpp  parameter_config.cpp  person_publisher.cpp  person_server.cpp  turtle_spawn.cpp  turtle_tf_broadcaster.cpp  turtle_tf_listener.cpp  velocitry_publisher.cpp
ch2/: 20-default.list  person_client.cpp  pose_subscriber.cpp
ch2/learning_action/: readbook_client.cpp  readbook_server.cpp
ch2/learning_service/: person_client.cpp  turtle_command_server.cpp
ch2/learning_topic/: person_subscriber.cpp
ch2/littlecar/src/littlecar_description/: mainpage.dox  manifest.xml
ch2/mrobot_ws/src/hello_world/: CMakeLists.txt  package.xml
ch2/mrobot_ws/src/learning_action/: CMakeLists.txt  package.xml
ch2/mrobot_ws/src/learning_parameter/: CMakeLists.txt  package.xml
ch2/mrobot_ws/src/learning_service/: CMakeLists.txt  package.xml
ch2/mrobot_ws/src/learning_tf/: CMakeLists.txt  package.xml
ch2/mrobot_ws/src/learning_topic/: CMakeLists.txt  package.xml
ch2/ros/rosdep/sources.list.d/: 20-default.list
ch2/ros/rosdistro/master/: index-v4.yaml
ch2/smartcar/launch/: smartcar.gazebo.launch  smartcar.urdf.rviz.launch
ch2/smartcar/scripts/: teleop.py
ch2/smartcar/src/smartcar_description/: CMakeLists.txt  package.xml
ch2/smartcar/urdf/: smartcar.urdf  smartcar.xacro
ch3/mrobotit/src/mrobotit_start/: CMakeLists.txt  creat_mrobotit_udev.sh  package.xml  tele.py
ch3/mrobotit/src/mrobotit_start/include/: mrobotit.h
ch3/mrobotit/src/mrobotit_start/launch/: mrobotit_start.launch
ch3/mrobotit/src/mrobotit_start/script/: led_light.py
ch3/mrobotit/src/mrobotit_start/src/: mrobotit.cpp  ubuntu@192.168.12.1
ch3/smartcar/HARDWARE/: I2C.c  I2C.h  I2C_MPU6050.c  I2C_MPU6050.h  MPU6050.c  adc.c  adc.h  delay.c  delay.h  encoder.c  encoder.h  lcd.c  lcd.h  led.c  led.h  motor.c  motor.h  mpu6050.h  pid.c  pid.h  pwm.c  pwm.h  sys.c  timer.c  timer.h  usart.c  usart.h
ch3/smartcar/MPUDMP/: inv_mpu.c  inv_mpu_dmp_motion_driver.c
ch3/smartcar/USER/: GPIO.c  encoder.c  encoder.h  main.c  smartcar-project.uvguix.code8  smartcar-project.uvoptx  smartcar-project.uvprojx  stm32f10x_it.c
ch4/read_camera/: CMakeLists.txt  package.xml
ch4/read_camera/cfg/: param.yaml
ch4/read_camera/include/: camera_manager.h  read_camera.h
ch4/read_camera/launch/: read_camera.launch  read_image.launch
ch4/read_camera/src/: camera_manager.cpp  read_camera.cpp  save_image.cpp
ch4/read_imu/: CMakeLists.txt  package.xml
ch4/read_imu/cfg/: param.yaml
ch4/read_imu/include/: read_imu.h
ch4/read_imu/launch/: read_imu.launch
ch4/read_imu/src/: read_imu.cpp  serial_data.cpp
ch4/read_laser/: CMakeLists.txt
ch4/read_laser/include/: read_laser.h
ch4/read_laser/launch/: read_laser.launch
ch4/read_laser/src/: read_laser.cpp
ch5/control_robot/: CMakeLists.txt  package.xml
ch5/control_robot/src/: control_aline.cpp  control_line.cpp  control_rotation.cpp  rotation_test.cpp  show_trajectory.cpp
ch6/: CMakeLists.txt  curve_fitting.cpp  curve_fitting_ceres.cpp  curve_fitting_g2o.cpp  linear_fitting.cpp
ch6/cartographer_installation/: install.sh
ch6/cfg/: mrobotit_mapbuild.lua
ch6/launch/: cartographer_slam.launch  gmapping.launch  hector_slam.launch  karto_slam.launch
ch6/ros_data/: calculate_delta.py  clf_intel_to_bag.py  gmapping.txt  karto.txt  odom_origin.txt  odom_origin_gmapping.txt
ch6/toy_pose_graph_2d_Ceres_G20-main/: CMakeLists.txt  README.md  ceresBackend.cpp  g2oBackend.cpp  g2oDataManager.cpp  g2oDataManager.h  types.h
ch6/toy_pose_graph_2d_Ceres_G20-main/ceres_solve/: problemPoseGraph.cpp  problemPoseGraph.h
ch6/toy_pose_graph_2d_Ceres_G20-main/datas/: city.g2o  drifted_circle.g2o  intel.g2o  manhattan_result.g2o
ch6/toy_pose_graph_2d_Ceres_G20-main/script/: poses_optimized_ceres.txt  poses_optimized_g2o.txt  poses_original_ceres.txt
ch7/launch/: navigation.launch
ch7/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  move_base_params.yaml
ch8/cafe_robot/: CMakeLists.txt  package.xml
ch8/cafe_robot/launch/: food_robot.launch  gmapping_test.launch  karto_test.launch  map.launch  mouse_click.launch  navigation.launch  test.launch  world.launch
ch8/cafe_robot/map/: cafe_house.pgm  cafe_house.yaml  robot.pgm  robot.yaml
ch8/cafe_robot/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
ch8/cafe_robot/src/: mouse_click.cpp
ch8/cafe_robot/world/: cafe_house.world  cafe_house1.world  cafe_house2.world
clean_robot/src/clean_robot/: CMakeLists.txt  package.xml
clean_robot/src/explore/src/: explore.cpp  (+2 more)
control_test/: CMakeLists.txt  package.xml
control_test/cfg/: param.yaml
control_test/include/control_test/: common_func.h  control_robot.h  moblie_robot.h  serial_test.h
control_test/launch/: amcl_test.launch  auto_gmapping.launch  clean_robot.launch  control_test.launch  karto_slam.launch  laser_filter.launch  mobile_robot_test.launch  move_base.launch  multipoints_curise.launch  navigation_slam.launch  rotation_test.launch  serial_test.launch  slam_moblie_robot.launch
control_test/map/: map.pgm  map.yaml  map1.pgm  map1.yaml  test.pgm  test.yaml  test2.pgm  test2.yaml  test3.pgm  test3.yaml  zhanting.pgm  zhanting.yaml
control_test/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  scan_filter.yaml
control_test/rviz/: multipoints_course.rviz
control_test/rviz_config/: auto_gmapping.rviz  karto_slam.rviz  multipoints_curise.rviz
control_test/scripts/: Multipoints_Cruise.py  keyboard.py  laser_filters.py
control_test/sh/: multipoints_curise.sh
control_test/src/: CleaningPathPlanner.cpp  PathPlanningNode.cpp  control_robot.cpp  control_test.cpp  mobile_robot.cpp  next_goal.cpp  rotation_test.cpp  serial_test.cpp  slam_mobile_robot.cpp  tf_read.cpp
(+57 files in other folders)
